--- a/optionC_modernize.css
+++ b/optionC_modernize.css
@@ -7,15 +7,30 @@ a {
 	text-decoration: none;
 	color: rgb(232,113,41);
 	font-family: Georgia, serif;
-	font-size: 0.80em;
+	font-size: 1.5em;
 }
 
 #wrapper {
+	padding-bottom: 30px;
 	background-color: rgb(20,20,20);
 	color: white;
-	font-family: Verdana, sans-serif;
+	font-family: Arial, Garamond, Helvetica, Verdana, sans-serif;
 	font-size: 0.70em;
 }
+
+#header {
+	background-color: rgb(20,20,20);
+}
+	#header img {
+		display: inline-block;
+		vertical-align: middle;
+		padding: 15px;
+	}
+	#header p {
+		display: inline-block;
+		font-size: 1.2em;
+		margin-left: 550px;
+	}
 
 #sitenav {
 	background-color: rgb(57,57,57);
@@ -32,38 +47,95 @@ a {
 #contentnav {
 	background-color: rgb(20,20,20);
 	/*border: 1px solid white;*/
-	padding: 20px;
+	padding: 30px;
 	font-size: 0.80em;
+	line-height: 1.4em;
 }
 	#contentnav img {
 		vertical-align: top;
+		padding: 0 5px;
+		/*width: 48px;*/
 	}
 	#contentnav li {
 		display: inline-block;
-		width: 200px;
+		width: 220px;
 	}
 	#contentnav li div {
 		display: inline-block;
-		width: 100px;
+		width: 140px;
+		/*width: auto;*/
 	}
 
 #calltoaction {
 	background-color: rgb(17,17,17);
 	padding: 20px;
+	line-height: 1.4em;
+	/*font-weight: 100;*/
 }
 	#calltoaction div {
 		display: inline-block;
 		width: 600px;
+		margin-right: 150px;
+		padding: 10px;
+	}
+	#calltoaction h3 {
+		padding: 10px 0;
+		font-size: 1.8em;
+		font-weight: 100;
 	}
 	#calltoaction button {
 		display: inline-block;
+		vertical-align: top;
+		margin-top: 30px;
+		/*vertical-align: middle;*/
 		background-color: rgb(232,113,41);
 		color: white;
-		padding: 5px 12px;
+		font-size: 1.2em;
+		padding: 5px 20px;
+		left-margin: 100px;
 		border-radius: 5px;
 	}
 
-
-#portfolio li {
-	display: inline-block;
+#portfolio {
+	padding: 10px 20px;
 }
+	#portfolio div {
+		padding: 15px 0;
+	}
+	#portfolio div h4 {
+		display: inline-block;
+		width: 700px;
+		font-size: 1.5em;
+		font-weight: 100;
+		font-family: Georgia, serif;
+	}
+	#portfolio > div > a {
+		display: inline-block;
+		text-align: right;
+		font-style: italic;
+		font-size: 1.2em;
+	}
+	#portfolio li {
+		display: inline-block;
+		width: 240px;
+	}
+	#portfolio li img {
+		display: block;
+		border: 5px solid rgb(41,41,41);
+	}
+	#portfolio li a{
+		display: block;
+		padding: 5px 0;
+		font-size: 1.2em;
+	}
+	#portfolio li p {
+		width: 221px;
+	}
+
+
+
+
+
+
+
+
